dst 1.5.1.9011

Changes to function dsrwon 
- Parameter sparseM removed. Not necessary to specify this. Replaced byy parametter use_ssnames.

- New parameter: use_ssnames = c(TRUE, FALSE). Default = FALSE. use "TRUE" when you want to work specifically with subsets names to do the intersections. Work only with the univariate frame of discernment. Does'nt work yet with product spaces.

- New parameter: skpt_tt = c(FALSE, TRUE). Default = FALSE". Choose TRUE if you don't want to save this table. Useful if you apply the function repeatedly, and you want to save the last result only.

Function bca.
- Parameter ssnames added.
- test for duplicate column names added

-----------
dst 1.5.1.9010
Same as 9009
______________
dst 1.5.1.9009
Same as .9008
_______________
dst 1.5.1.9008

Temporarily removed the possibility of using subsets label (parameter ssnames) instead of a description matrix (parameter tt). This possibility will retested later.
_________________
dst 1.5.1.9007

addTobca: A parameter "status" has been added to the "spec" of the bca in order to distinguish the new subsets added from the ones already present (documentation to be updated with an example).

bca: parametetrs ssnames and sfod removed. It is not necessary to supply subsets names. They are obtained from the columns names of tt (0,1) matrix. See the new function "ssnames" designed for that.

dsrwon: correction to call to dst package for parallel processing.

nameRows: Allow sparse matrix as input. Removed stopping the function if there is no column names.Generate column names instead.

nzdsr: 
A call to function "dsrwon" has been removed to speed up the function. If the empty set is in first position in the matrix of subsets, as it should be, the normalization wil be done correctly.
