@@ -4,18 +4,22 @@
 \alias{belplau}
 \title{Calculation of the degrees of Belief and Plausibility of a basic chance assignment (bca).}
 \usage{
-belplau(x, remove = FALSE)
+belplau(x, remove = FALSE, h = NULL)
 }
 \arguments{
 \item{x}{A basic chance assignment mass function (see \code{\link{bca}}).}
 
 \item{remove}{= TRUE: Exclude subsets with zero mass.}
+
+\item{h}{= NULL: Hypothesis to be tested. Description matrix in the same format than \code{x$tt}}
 }
 \value{
 A matrix of \code{M} rows by 3 columns is returned, where \code{M} is the number of focal elements: \itemize{
- \item Column 1: the degree of belief \code{Bel};
- \item Column 2: the degree of Plausibility \code{Pl};
- \item Column 3: the Plausibility ratio
+ \item Column 1: the degree of Belief \code{bel};
+ \item Column 2: the degree of Disbellief (belief in favor of the contrary hypothesis) \code{disbel};
+ \item Column 3: the degree of Epistemic uncertainty \code{unc};
+ \item Column 4: the degree of Plausibility \code{plau};
+ \item Column 5: the Plausibility ratio \code{rplau}.
    }
 }
 \description{
@@ -37,10 +41,12 @@ y <- bca(tt = matrix(c(1,0,0,1,1,1),nrow = 2,
 byrow = TRUE), m = c(0.6, 0.4),  
 cnames = c("a", "b", "c"),  varnames = "y", idvar = 1)
 xy <- nzdsr(dsrwon(x,y))
-belplau(xy)
+belpllau(xy)
 print("compare all elementary events")
 xy1 <- addTobca(x = xy, tt = matrix(c(0,1,0,0,0,1), nrow = 2, byrow = TRUE))
 belplau(xy1) 
+belplau(xy1, remove = TRUE) 
+belplau(xy1, h = matrix(c(1,0,0,0,1,1), nrow = 2, byrow = TRUE))
 
 }
 \references{
